[package]
name = "rust-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
pyo3 = { version = "0.19.2" }
toml = { version = "0.4.2" }
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.9" }